# mailing-list-ai-check

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: gitleaks.yml
docs/: export-import.md
docs/findings/: extraction.md  imap.md  pangram.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
src/mailing_list_ai_check/: __init__.py  cleaning.py  cli.py  config.py  export_import.py  extraction.py  fetcher.py  html_text.py  imap_client.py  pangram.py  store.py
tests/: conftest.py  seed.py  test_cleaning.py  test_cli.py  test_config.py  test_export_import.py  test_extraction.py  test_fetcher.py  test_html_text.py  test_imap_client.py  test_pangram.py  test_score_cli.py  test_store.py  test_store_query.py  test_webapp.py
tests/fixtures/: README.md  bottompost-clean-quic-01.eml  bottompost-confidentiality-sig-lastcall-01.eml  bottompost-multipart-alt-ietf-01.eml  digest-dashsep-nomcom-ietf-01.eml  digest-github-multipart-quic-01.eml  interleaved-bom-tls-01.eml  interleaved-deep-thread-tls-01.eml  interleaved-elision-lastcall-01.eml  interleaved-greeting-quic-01.eml  interleaved-indented-quotes-lastcall-01.eml  interleaved-pointbypoint-lastcall-01.eml  noquote-prose-signature-ietf-01.eml  signature-corporate-contact-wimse-01.eml  signature-identifier-links-wimse-01.eml  signature-pgp-german-attribution-tls-01.eml  threadstarter-announcement-quic-01.eml  threadstarter-rfc2047-header-ietf-01.eml  (+7 more)
(+45 files in other folders)
