[project]
name = "mailing-list-ai-check"
version = "0.2.0"
description = "AI-assisted checking of mailing-list mail"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.31",
    "email-reply-parser>=0.5.12",
    "flask>=3.0",
]

[project.scripts]
mail-ai-pull = "mailing_list_ai_check.cli:main"
mail-ai-extract = "mailing_list_ai_check.cli:extract_main"
mail-ai-score = "mailing_list_ai_check.cli:score_main"
mail-ai-web = "mailing_list_ai_check.webapp:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
